--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               <li id="name5"><h2 class="ml">Your Name</h2></li>
               <li id="name6"><h2 class="fi">Your Name</h2></li>
               <!-- add more <li> if needed, adding your name as id and the corresponding class (ml, pl or fi)-->
+              <li id="silvio"><h2 class="pl rainbow">Silvio Lorusso</h2></li>
             </ul>
 
         </div>
