--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
                  <li id="name13"><h2 class="ml">Your Name</h2></li>
               <li id="name7"><h2 class="ml">Your Name</h2></li>
-              <li id="name8"><h2 class="pl">Your Name</h2></li>
+              <li id="name8"><h2 class="pl">CCL</h2></li>
               <li id="lucia"><h2 class="pl">Lucia Dossin</h2></li>
               <li id="name9"><h2 class="ml">Your Name</h2></li>
               <li id="name10"><h2 class="fi">Your Name</h2>
