Name12 now New Name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li id="name9"><h2 class="ml">Your Name</h2></li>
               <li id="name10"><h2 class="fi">Your Name</h2>
               <li id="name11"><h2 class="ml">Your Name</h2></li>
-              <li id="name12"><h2 class="fi">Your Name</h2>
+              <li id="Nicoleta"><h2 class="pl">Nicoleta</h2>
             </ul>
 
         </div>
