--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-
 <html>
+
 <head>
     <title>Git Workshop</title>
     <meta charset="utf-8">
-
     <!-- the file containing the styles used in this page -->
     <link rel="stylesheet" href="css/style.css" />
     <!--jQuery framework -->
@@ -12,45 +11,50 @@
 </head>
 
 <body>
-
     <div id="wrapper">
-
         <h1>Coding Workshop</h1>
         <h2>Day 3 - git</h2>
-
         <div id="content">
-
             <ul id="projects">
-              <li id="pl" title="PublishingLab">PublishingLab</li>
-              <li id="ml" title="MediaLab">MediaLab</li>
-              <li id="all" title="All">All</li>
+                <li id="pl" title="PublishingLab">PublishingLab</li>
+                <li id="ml" title="MediaLab">MediaLab</li>
+                <li id="all" title="All">All</li>
             </ul>
-
             <ul id="names">
-              <li id="Abdo"><h2 class="ml">Abdelrahman Hassan</h2></li>
-              <li id="name2"><h2 class="ml">Your Name</h2></li>
-              <li id="name3"><h2 class="pl">Your Name</h2></li>
-              <li id="lucia"><h2 class="pl">Lucia Dossin</h2></li>
-              <li id="name5"><h2 class="ml">Your Name</h2></li>
-              <li id="name6"><h2 class="fi">Your Name</h2></li>
-              <!-- add more <li> if needed, adding your name as id and the corresponding class (ml, pl or fi)-->
-              <li id="silvio"><h2 class="pl rainbow">Silvio Lorusso</h2></li>
-                
-                 <li id="name13"><h2 class="ml">Your Name</h2></li>
-              <li id="name7"><h2 class="ml">Your Name</h2></li>
-              <li id="name8"><h2 class="pl">Your Name</h2></li>
-<li id="name9"><h2 class="ml">Your Name</h2></li>
-              <li id="name10"><h2 class="fi">Your Name</h2>
-              <li id="name11"><h2 class="ml">Your Name</h2></li>
-              <li id="name12"><h2 class="fi">Your Name</h2>
+                <li id="Abdo">
+                    <h2 class="ml">Abdelrahman Hassan</h2></li>
+                <li id="Luca">
+                    <h2 class="pl youngmegasexy">Luca Claessens</h2></li>
+                <li id="name3">
+                    <h2 class="pl">Your Name</h2></li>
+                <li id="lucia">
+                    <h2 class="pl">Lucia Dossin</h2></li>
+                <li id="name5">
+                    <h2 class="ml">Your Name</h2></li>
+                <li id="name6">
+                    <h2 class="fi">Your Name</h2></li>
+                <!-- add more <li> if needed, adding your name as id and the corresponding class (ml, pl or fi)-->
+                <li id="silvio">
+                    <h2 class="pl rainbow">Silvio Lorusso</h2></li>
+                <li id="name13">
+                    <h2 class="ml">Your Name</h2></li>
+                <li id="name7">
+                    <h2 class="ml">Your Name</h2></li>
+                <li id="name8">
+                    <h2 class="pl">Your Name</h2></li>
+                <li id="name9">
+                    <h2 class="ml">Your Name</h2></li>
+                <li id="name10">
+                    <h2 class="fi">Your Name</h2>
+                    <li id="name11">
+                        <h2 class="ml">Your Name</h2></li>
+                    <li id="name12">
+                        <h2 class="fi">Your Name</h2>
             </ul>
-
         </div>
-
     </div>
-
     <!-- this file contains the code that handles the button clicks -->
     <script src="js/script.js"></script>
-
 </body>
+
 </html>
