--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <ul id="names">
               <li id="Abdo"><h2 class="ml">Abdelrahman Hassan</h2></li>
               <li id="name2"><h2 class="ml">Your Name</h2></li>
-              <li id="name3"><h2 class="pl">Your Name</h2></li>
+              <li id="name3"><h2 class="pl">Oliver Barstow</h2></li>
               <li id="lucia"><h2 class="pl">Lucia Dossin</h2></li>
               <li id="shogo"><h2 class="ml">Shogo Takahashi</h2></li>
               <li id="johanna"><h2 class="ml">Johanna Musch</h2></li>
               <li id="name6"><h2 class="fi">Your Name</h2></li>
               <!-- add more <li> if needed, adding your name as id and the corresponding class (ml, pl or fi)-->
               <li id="silvio"><h2 class="pl rainbow">Silvio Lorusso</h2></li>
-                
+
                  <li id="name13"><h2 class="ml">Your Name</h2></li>
               <li id="name7"><h2 class="ml">Your Name</h2></li>
               <li id="name8"><h2 class="pl">Your Name</h2></li>
