--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
                     <h2 class="ml">Abdelrahman Hassan</h2></li>
                 <li id="Luca">
                     <h2 class="pl youngmegasexy">Luca Claessens</h2></li>
-                <li id="name3">
-                    <h2 class="pl">Your Name</h2></li>
+                 <li id="name8"><h2 class="pl">CCL</h2></li>
                 <li id="lucia">
                     <h2 class="pl">Lucia Dossin</h2></li>
                   <li id="shogo"><h2 class="ml">Shogo Takahashi</h2></li>
