--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Git Workshop</title>
+    <title>Git WOO000OOPshop</title>
     <meta charset="utf-8">
     <!-- the file containing the styles used in this page -->
     <link rel="stylesheet" href="css/style.css" />
@@ -35,6 +35,8 @@
                 <li id="silvio">
                     <h2 class="pl rainbow">Silvio Lorusso</h2></li>
               <li id="Nicoleta"><h2 class="pl">Nicoleta</h2>
+
+                 <li id="Thomas"><h2 class="pl">Thomas Walskaar </h2>
             </ul>
         </div>
     </div>
