--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Git Workshop</title>
+    <title>THIS IS CHAOS</title>
     <meta charset="utf-8">
     <!-- the file containing the styles used in this page -->
     <link rel="stylesheet" href="css/style.css" />
@@ -26,6 +26,7 @@
                 <li id="Luca">
                     <h2 class="pl youngmegasexy">Luca Claessens</h2></li>
                  <li id="name8"><h2 class="pl">CCL</h2></li>
+                  <li id="name3"><h2 class="pl">Oliver Barstow</h2></li>
                 <li id="lucia">
                     <h2 class="pl">Lucia Dossin</h2></li>
                   <li id="shogo"><h2 class="ml">Shogo Takahashi</h2></li>
